--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <div class="slide"><img src="./img/Rectangle 3.png" alt="Foto do loft"></div>
                     <div class="setas">
                         <a href="#" class="left" title="anterior">
-                            <img src="./img/Vector (1).svg" alt="Anterior">
+                            <img src="./img/anterior.svg" alt="Anterior">
                         </a>
                         <a href="#" class="right" title="próximo">
-                            <img src="./img/Vector (2).svg" alt="Próximo">
+                            <img src="./img/proximo.svg" alt="Próximo">
                         </a>
                     </div>
             </div>
