--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
                     </article>
                 </div>
             </section>
+            <section class="contato">
+                <div class="container">
+                    <h2>Contato</h2>
+                    <form>
+                        <label for="input_nome">Nome</label>
+                            <input type="text" name="nome" id="input_nome" placeholder="Insira seu nome completo" required>
+                        <label for="input_email">E-mail</label>
+                            <input type="email" name="email" id="input_email" placeholder="Insira seu e-mail principal" required>
+                        <label for="input_mensagem" class="mensagem">Mensagem</label>
+                            <textarea name="mensagem" id="input_mensagem"></textarea required>
+                        <button type="submit">Enviar</button>
+                    </form>
+                </div>
+            </section>
     </main>
     <footer>
         <div class="mapa"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14631.954336743434!2d-46.7724023!3d-23.532913!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x739f0ddb0439cf94!2sDigital%20House%20Brasil!5e0!3m2!1spt-BR!2sbr!4v1620687017849!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
