adicionando páginas confirmação e tenho interesse

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <section class="contato">
                 <div class="container">
                     <h2>Contato</h2>
-                    <form>
+                    <form action="./form-sucesso.html">
                         <label for="input_nome">Nome</label>
                             <input type="text" name="nome" id="input_nome" placeholder="Insira seu nome completo" required>
                         <label for="input_email">E-mail</label>
