add form de interesse

--- a/form-interesse.html
+++ b/form-interesse.html
@@ -19,7 +19,50 @@
         </div>
     </header>
     <main>
-        
+        <div class="container"></div>
+        <form action="./form-sucesso.html">
+            <p>
+            <label for="nome">Nome</label>
+                <input type="text" name="nome" id="nome">
+            </p>
+            <p>
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email">
+            </p>
+            <p>
+                <label for="telfone">Telefone</label>
+                <input type="tel" name="telefone" id="telefone">
+            </p>
+            <p>
+                <label>Contrato</label>
+                <input type="checkbox" name="contrato" id="aluguel" value="Aluguel"><label for="aluguel">Aluguel</label>
+                <input type="checkbox" name="contrato" id="compra" value="Compra"><label for="compra">Compra</label>
+            </p>
+            <p>
+                <label>Pet Friendly</label>
+                <input type="radio" name="petfriendly" id="sim" value="Sim"><label for="sim">Sim</label>
+                <input type="radio" name="petfriendly" id="nao" value="Não"><label for="nao">Não</label>
+            </p>
+            <p>
+                <label>Região</label>
+                <select name="regiao">
+                <option selected disabled>Selecione uma opção</option>
+                <option value="Centro">Centro</option>
+                <option value="Sul">Sul</option>
+                <option value="Norte">Norte</option>
+                <option value="Leste">Leste</option>
+                <option value="Oeste">Oeste</option>
+            </select>
+            </p>
+            <p>
+            <label for="observacoes">Observações</label>
+            <textarea name="observacoes" id="observacoes"></textarea>
+            </p>
+            <p>
+                <button type="submit">Enviar</button>
+            </p>
+        </div>
+        </form>
     </main>
     <footer>
         <div class="mapa"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14631.954336743434!2d-46.7724023!3d-23.532913!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x739f0ddb0439cf94!2sDigital%20House%20Brasil!5e0!3m2!1spt-BR!2sbr!4v1620687017849!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
