--- a/index.html
+++ b/index.html
@@ -31,6 +31,35 @@
                         </a>
                     </div>
             </div>
+            </section>
+            <section class="projects">
+                <div class="container">
+                    <article>
+                        <div class="thumb" style="background-image: url(./img/Rectangle\ 6.png);"></div>
+                        <div class="info">
+                            <div class="price-tag">
+                                <p class="price">$12.000</p>
+                                <p class="tag tag-new">NEW</p>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium esse sunt ad voluptatem,
+                                quo unde provident magnam molestias voluptatibus numquam porro itaque placeat voluptatum
+                                adipisci ab, enim eligendi nam consequuntur?</p>
+                        </div>
+                    </article>
+                    <article>
+                        <div class="thumb" style="background-image: url(./img/Rectangle\ 7.png);"></div>
+                        <div class="info">
+                            <div class="price-tag">
+                                <p class="price">$12.000</p>
+                                <p class="tag tag-sale">SALE</p>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium esse sunt ad voluptatem,
+                                quo unde provident magnam molestias voluptatibus numquam porro itaque placeat voluptatum
+                                adipisci ab, enim eligendi nam consequuntur?</p>
+                        </div>
+                    </article>
+                </div>
+            </section>
             <section class="styles">
                 <div class="container">
                     <h2>Your Style</h2>
