--- a/index.html
+++ b/index.html
@@ -98,10 +98,9 @@
         <p>LOVT - You love, your loft!</p>
         <p>Broad St, <br>
         Newark, NJ 07102 - USA</p>
-        <p><a href="tel:+1973854555548">+1 (973) 854-555-548</a></p>
+        <p><a href="tel:+1973854555548">+1 (973) 854-555-548</a> <a target="_blank" href="https://api.whatsapp.com/send?phone=5511954609195&text=Ol%C3%A1%2C%20gostaria%20de%20um%20or%C3%A7amento.">(WhatsApp)</a></p>
         <p><a href="mailto:contact@lovtrealestate.com">contact@lovtrealestate.com</a></p>
         <!-- <a href="http://wa.me/+5511954609195">(WhatsApp)</a> -->
-        <a target="_blank" href="https://api.whatsapp.com/send?phone=5511954609195&text=Ol%C3%A1%2C%20gostaria%20de%20um%20or%C3%A7amento.">(WhatsApp)</a>
         <br>
         OUR SOCIAL MEDIAS:
             <img src="./img/Vector (1).svg" alt="">
