--- a/form-sucesso.html
+++ b/form-sucesso.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Confirmação</title>
+    <title>LOVT - Formulário enviado!</title>
 </head>
 <body>
     <header>
@@ -18,13 +18,15 @@
             <button class="menu-toggle">☰</button>
         </div>
     </header>
-    <main>
-        <div class="container">
-            <h1>Formulário enviado com sucesso</h1>
-            <h2>Um membro da equipe entrará em contato em breve</h2>
-            
+    <main class="main-form">
+            <div class="container">
+            <h1>Formulário enviado com sucesso!</h1>
+            <h2>Entraremos em contato em breve.</h2>
+
             <!-- link para voltar para página principal -->
+            <p>
             <a href="index.html" class="btn-primary">Voltar</a>
+            </p>
         </div>
     </main>
     <footer>
